--- a/htdocs/assets/css/registro.css
+++ b/htdocs/assets/css/registro.css
@@ -1,3 +1,10 @@
+/*
+*** Autor: Daniel Polo Villegas ***
+*** Versión del programa: 1.0 ***
+*** Fecha de creación: 08/12/2017 ***
+*/
+
+
 body {
     background-color: #eee;
 }
