--- a/htdocs/assets/css/adv.css
+++ b/htdocs/assets/css/adv.css
@@ -1,3 +1,9 @@
+/*
+*** Autor: Daniel Polo Villegas ***
+*** Versión del programa: 1.0 ***
+*** Fecha de creación: 08/12/2017 ***
+*/
+
 body {
     font-family: 'open sans';
     overflow-x: hidden; }
