--- a/htdocs/assets/css/bootstrap.css
+++ b/htdocs/assets/css/bootstrap.css
@@ -1,3 +1,10 @@
+/*
+*** Autor: Daniel Polo Villegas ***
+*** Versión del programa: 1.0 ***
+*** Fecha de creación: 08/12/2017 ***
+*/
+
+
 body {
     font: 400 15px Lato, sans-serif;
     line-height: 1.8;
