--- a/htdocs/assets/css/list_adv.css
+++ b/htdocs/assets/css/list_adv.css
@@ -1,3 +1,10 @@
+/*
+*** Autor: Daniel Polo Villegas ***
+*** Versión del programa: 1.0 ***
+*** Fecha de creación: 08/12/2017 ***
+*/
+
+
 .glyphicon { margin-right:5px; }
 
 .thumbnail
