--- a/htdocs/assets/css/list_use.css
+++ b/htdocs/assets/css/list_use.css
@@ -1,3 +1,10 @@
+/*
+*** Autor: Daniel Polo Villegas ***
+*** Versión del programa: 1.0 ***
+*** Fecha de creación: 08/12/2017 ***
+*/
+
+
 i {  vertical-align: middle; }
 .table-users tbody tr:hover {
 	cursor: pointer;
