--- a/htdocs/assets/css/login.css
+++ b/htdocs/assets/css/login.css
@@ -1,3 +1,10 @@
+/*
+*** Autor: Daniel Polo Villegas ***
+*** Versión del programa: 1.0 ***
+*** Fecha de creación: 08/12/2017 ***
+*/
+
+
 @import url(http://fonts.googleapis.com/css?family=Roboto);
 
 /****** LOGIN MODAL ******/
